Fixes regarding wait lists.